--- a/art.html
+++ b/art.html
@@ -331,48 +331,48 @@
         </div>
       </div>
 
-      <!-- Art Piece 2 -->
+      <!-- Heart Painting -->
       <div class="col-12 col-sm-6 col-lg-4">
-        <div class="card art-card h-100">
-          <img src="art-gallery.png" class="card-img-top" alt="Artwork 2">
+        <div class="card product-card h-100 rounded-4">
+          <a href="heart-painting.html">
+            <img src="heart-painting.png" class="card-img-top item-img" alt="Protection Candle">
+          </a>
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title mb-1">Artwork Title #2</h5>
-            <p class="text-muted small mb-2">Print · placeholder</p>
-            <p class="fw-bold mb-2">$40.00</p>
-            <p class="small flex-grow-1">
-              Use this slot to showcase a print or smaller piece with its description.
-            </p>
-            <div class="mt-2">
-              <div
-                class="btn-group"
-                role="group"
-                aria-label="Artwork 2 quantity controls"
-                data-product-id="art2"
-              >
-                <button
-                  title="Remove Item"
-                  type="button"
-                  class="btn btn-outline-danger btn-cart-minus"
-                >
-                  <i class="bi bi-cart-dash"></i>
-                </button>
-                <button
-                  id="qty-art2"
-                  type="button"
-                  class="btn btn-outline-secondary"
-                  disabled
-                >
-                  0
-                </button>
-                <button
-                  title="Add Item"
-                  type="button"
-                  class="btn btn-outline-success btn-cart-plus"
-                >
-                  <i class="bi bi-cart-plus"></i>
-                </button>
-              </div>
+            <h5 class="card-title mb-1">Heart Painting</h5>
+            <p class="text-muted mb-2">Canvas painting of a heart.</p>
+            <p class="fw-bold mb-0">$44.99</p>
+            <small id="stock-heartPainting" class="text-muted d-block mb-2">
+              Checking stock...
+            </small>
+            
+            <div class="mt-auto d-flex justify-content-center">
+            <div class="btn-group btn-group-sm" role="group">
+            <button 
+              title="remove"
+              type="button" 
+              class="btn btn-outline-danger" 
+              onclick="changeQty('heartPainting', -1)">
+              <i class="bi bi-dash"></i>
+            </button>
+
+            <button 
+              type="button" 
+              class="btn btn-outline-secondary" 
+              disabled 
+              id="qty-heartPainting">
+              0
+            </button>
+
+            <button 
+              title="add"
+              type="button" 
+              class="btn btn-outline-success" 
+              onclick="changeQty('heartPainting', 1)">
+              <i class="bi bi-plus"></i>
+            </button>
             </div>
+            </div>
+            
           </div>
         </div>
       </div>
