--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@
                     </a>
                   </div>
                   <div class="carousel-item">
-                    <img src="jewl.png" class="d-block w-100" alt="Candles">
+                    <a href="heart-painting.html"><img src="heart-painting.png" class="d-block w-100" alt="Heart Painting"></a>
+                  </div>
+                  <div class="carousel-item">
+                    <a href="cross-painting.html"><img src="cross-painting.png" class="d-block w-100" alt="Cross Painting"></a>
                   </div>
                 </div>
               </div>
@@ -359,6 +362,52 @@
               type="button" 
               class="btn btn-outline-success" 
               onclick="changeQty('heartPainting', 1)">
+              <i class="bi bi-plus"></i>
+            </button>
+            </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+
+      <!-- Cross Painting -->
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card product-card h-100 rounded-4">
+          <a href="cross-painting.html">
+            <img src="cross-painting.png" class="card-img-top item-img" alt="Protection Candle">
+          </a>
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title mb-1">Cross Painting</h5>
+            <p class="text-muted mb-2">Canvas painting of a cross.</p>
+            <p class="fw-bold mb-0">$119.99</p>
+            <small id="stock-crossPainting" class="text-muted d-block mb-2">
+              Checking stock...
+            </small>
+            
+            <div class="mt-auto d-flex justify-content-center">
+            <div class="btn-group btn-group-sm" role="group">
+            <button 
+              title="remove"
+              type="button" 
+              class="btn btn-outline-danger" 
+              onclick="changeQty('crossPainting', -1)">
+              <i class="bi bi-dash"></i>
+            </button>
+
+            <button 
+              type="button" 
+              class="btn btn-outline-secondary" 
+              disabled 
+              id="qty-crossPainting">
+              0
+            </button>
+
+            <button 
+              title="add"
+              type="button" 
+              class="btn btn-outline-success" 
+              onclick="changeQty('crossPainting', 1)">
               <i class="bi bi-plus"></i>
             </button>
             </div>
