--- a/cart.html
+++ b/cart.html
@@ -122,6 +122,12 @@
             <strong id="cartSubtotal">$0.00</strong>
           </div>
 
+          <!-- Sale Discount -->
+          <div class="d-flex justify-content-between mb-2 text-success d-none" id="discountRow">
+            <span>🎄 Christmas Sale (15% off)</span>
+            <span id="cartDiscount">-$0.00</span>
+          </div>
+
           <div class="d-flex justify-content-between mb-2">
             <span>Tax (8%)</span>
             <span id="cartTax">$0.00</span>
