--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
           <div class="col-6 d-none d-lg-block">
             <div class="promo-card card border-0">
-                <img src="jewl.png" alt="Promo" class="card-img-top rounded-4">
+                <img src="jewelry.png" alt="Promo" class="card-img-top rounded-4">
             </div>
           </div>
         </div>
